--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <title>Zomato</title>
         <link rel="stylesheet" href="./style.css">
         <link rel="shortcut icon" href="https://b.zmtcdn.com/images/logo/zomato_logo_2017.png" type="image/">        
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     </head>
     <body>
         <!-- HEADER -->
@@ -22,7 +24,7 @@
                 </ul>
             </div>
             <div class="head">
-                <img src="https://b.zmtcdn.com/web_assets/8313a97515fcbo447d2d77c276532a511583262271.png" alt="logo" class="logo">
+                <img src="https://b.zmtcdn.com/web_assets/8313a97515fcb0447d2d77c276532a511583262271.png" alt="logo" class="logo">
                 <h3>Discover the best food and drink in Delhi NCR</h3>
                 <div class="search">
                     <div class="search-item">
