--- a/index.html
+++ b/index.html
@@ -41,5 +41,12 @@
                 <img src="https://b.zmtcdn.com/web_assets/81f3ff974d82520780078ba1cfbd453a1583259680.png" alt="header background">
             </div>
         </header>
+
+        <!-- SECTION 1 -->
+        <section class="section-1">
+            <div class="section-1-item">
+                
+            </div>
+        </section>
     </body>
 </html>
