--- a/index.html
+++ b/index.html
@@ -45,7 +45,65 @@
         <!-- SECTION 1 -->
         <section class="section-1">
             <div class="section-1-item">
-                
+                <div class="items-details"><p>Order food online</p></div>
+                <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="image1">               
+            </div>
+            <div class="section-1-item">
+                <div class="items-details"><p>Order food online</p></div>
+                <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="image1">               
+            </div>
+            <div class="section-1-item">
+                <div class="items-details"><p>Order food online</p></div>
+                <img src="https://b.zmtcdn.com/webFrontend/d9d80ef91cb552e3fdfadb3d4f4379761647365057.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="image1">               
+            </div>
+        </section>
+
+        <!-- SECTION 2 -->
+        <section class="section-2">
+            <div class="section-2-heading">
+                <p>Popular localities in Delhi NCR</p>
+            </div>
+            <div class="section-2-container">
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
+                <div class="section-2-item">
+                    <p class="item-head">Cannaught Place</p>
+                    <p class="item-subhead">388 Plaza</p>
+                </div>
             </div>
         </section>
     </body>
