--- a/index.html
+++ b/index.html
@@ -45,67 +45,114 @@
         <main>
             <!-- SECTION 1 -->
         <section class="section-1">
-            <div class="section-1-item">
-                <div class="items-details"><p>Order food online</p></div>
-                <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="image1">               
-            </div>
-            <div class="section-1-item">
-                <div class="items-details"><p>Order food online</p></div>
-                <img src="https://b.zmtcdn.com/webFrontend/d026b357feb0d63c997549f6398da8cc1647364915.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="image1">               
-            </div>
-            <div class="section-1-item">
-                <div class="items-details"><p>Order food online</p></div>
-                <img src="https://b.zmtcdn.com/webFrontend/d9d80ef91cb552e3fdfadb3d4f4379761647365057.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="image1">               
-            </div>
+           <div class="card">
+                <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="order online">
+                <div>
+                    <p class="title">Order Online</p>
+                    <p class="description">Stay home and order to your doorstep</p>
+                </div>
+           </div>
+           <div class="card">
+                <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="order online">
+                <div>
+                    <p class="title">Dining</p>
+                    <p class="description">View the city's favourite dining venues</p>
+                </div>
+           </div>
+           <div class="card">
+                <img src="https://b.zmtcdn.com/webFrontend/e5b8785c257af2a7f354f1addaf37e4e1647364814.jpeg?output-format=webp&fit=around|402:360&crop=402:360;*,*" alt="order online">
+                <div>
+                    <p class="title">Nightlife and clubs</p>
+                    <p class="description">Explore the city's top nightlife outlets</p>
+                </div>
+           </div>
         </section>
 
         <!-- SECTION 2 -->
         <section class="section-2">
             <div class="section-2-heading">
-                <p>Popular localities in Delhi NCR</p>
+                <h2>Popular localities in <span>Delhi NCR</span></h2>
             </div>
+
             <div class="section-2-container">
-                <div class="section-2-item">
-                    <p class="item-head">Cannaught Place</p>
-                    <p class="item-subhead">238 places</p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Sector 29</a></p>
-                    <p class="item-subhead"><a href="">132 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Sector 18, Nokia</a></p>
-                    <p class="item-subhead"><a href="">188 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Rajouri Garden</a></p>
-                    <p class="item-subhead"><a href="">250 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Saket</a></p>
-                    <p class="item-subhead"><a href="">292 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">DLF Cyber City</a></p>
-                    <p class="item-subhead"><a href="">139 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Golf Course Road</a></p>
-                    <p class="item-subhead"><a href="">145 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">DLF Phase 4</a></p>
-                    <p class="item-subhead"><a href="">203 places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Sector 29</a></p>
-                    <p class="item-subhead"><a href="">388 Places</a></p>
-                </div>
-                <div class="section-2-item">
-                    <p class="item-head"><a href="" class="places-link">Sector 29</a></p>
-                    <p class="item-subhead"><a href="">388 Places</a></p>
-                </div>
-                
+                    <div class="section-2-items">
+                            <div class="section-2-item">
+                                <p class="item-head">Cannaught Place</p>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>                  
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <h5 class="item-head">Cannaught Place</h5>
+                                <p class="item-subhead">238 places</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
+                    <div class="section-2-items">
+                        <a href="#">
+                            <div class="section-2-item">
+                                <p class="item-subhead">More</p>
+                            </div>
+                            <i class="sc-rbbb40-1 iFnyeo sc-dhmstB jSgNOB" size="15" color="#1C1C1C"><svg xmlns="http://www.w3.org/2000/svg" fill="#1C1C1C" width="15" height="15" viewBox="0 0 20 20" aria-labelledby="icon-svg-title- icon-svg-desc-" role="img" class="sc-rbbb40-0 jKmKoK"><title>chevron-right</title><path d="M6.98 15.94c-0.3-0.28-0.3-0.76 0-1.060l4.46-4.46-4.46-4.48c-0.3-0.28-0.3-0.76 0-1.060s0.76-0.28 1.060 0l5 5c0.28 0.3 0.28 0.78 0 1.060l-5 5c-0.3 0.3-0.78 0.3-1.060 0z"></path></svg></i>
+                        </a>                   
+                    </div>
             </div>
         </section>
         </main>
