--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <footer>
         <code>
-            Made with ❤️ by Omraj Sharma 
+            Made with ❤️ by Egba Nnaemeka 
         </code>    
     </footer>
 </body>
